--- a/fixtures/deprecated_nginx_conf/nginx.conf
+++ b/fixtures/deprecated_nginx_conf/nginx.conf
@@ -22,6 +22,7 @@ http {
     root /home/vcap/app/public;
     location / {
         index index.html index.htm Default.htm;
+        try_files $uri $uri/ /index.html;
     }
   }
 }
