--- a/fixtures/reverse_proxy/nginx.conf
+++ b/fixtures/reverse_proxy/nginx.conf
@@ -25,6 +25,7 @@ http {
     location / {
       root <%= ENV["APP_ROOT"] %>/public;
       index index.html index.htm Default.htm;
+      try_files $uri $uri/ /index.html;
     }
   }
 }
